--- a/templates/external-secret.yaml
+++ b/templates/external-secret.yaml
@@ -1,4 +1,28 @@
 ---
+{{ if and .Values.sourceExternalSecret }}
+apiVersion: "external-secrets.io/v1alpha1"
+kind: ExternalSecret
+metadata:
+  name: {{ template "rclone.fullname" . }}-external-secret
+  labels:
+    {{- include "rclone.labels" . | nindent 4 }}
+spec:
+  secretStoreRef:
+    name: cluster-secretstore
+    kind: ClusterSecretStore
+  target:
+    name: source_provider_s3.creds
+    creationPolicy: Owner
+    template:
+      engineVersion: v2
+      data:
+        dest_provider_s3.creds: "{{ `{{ .creds_file }}` }}"
+  data:
+  - secretKey: creds_file
+    remoteRef:
+      key: {{ .Values.sourceExternalSecret }}
+{{ end }}
+---
 {{ if and .Values.destExternalSecret }}
 apiVersion: "external-secrets.io/v1alpha1"
 kind: ExternalSecret
@@ -22,4 +46,3 @@ spec:
     remoteRef:
       key: {{ .Values.destExternalSecret }}
 {{ end }}
----
