--- a/values.yaml
+++ b/values.yaml
@@ -92,13 +92,13 @@ remoteBackendsSecrets: []
 
 #
 # Resource utlization for the pod.
-resources:
-  requests:
-    cpu: "100m"
-    memory: "256Mi"
-  limits:
-    cpu: "500m"
-    memory: "1024Mi"
+resources: {}
+  # requests:
+  #   cpu: "100m"
+  #   memory: "256Mi"
+  # limits:
+  #   cpu: "500m"
+  #   memory: "1024Mi"
 
 volumes:
   - name: rclone-conf
