--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,5 +40,6 @@ jobs:
           helm package ./ -d ./charts
           helm repo index --url https://abarrak.github.io/rclone-helm ./
           LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          git add .
           git commit -m "[auto] publish new release - chart ${LATEST_TAG}"
           git push origin gh-pages
