--- a/templates/cron.yaml
+++ b/templates/cron.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "rclone.labels" . | nindent 4 }}
 spec:
-  schedule: {{ .Values.schedule }}
+  schedule: {{ .Values.schedule | quote }}
   {{- if hasKey .Values "suspend" }}
   suspend: {{ .Values.suspend }}
   {{- end }}
