--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Helm Unit tests plugin
         run: |
           echo $PATH
-          helm plugin install https://github.com/helm-unittest/helm-unittest >/dev/null 2>/dev/null
+          helm plugin install https://github.com/helm-unittest/helm-unittest --verify=false >/dev/null 2>/dev/null
 
       - name: Run unit tests.
         run: helm unittest --color ./
